# colorgen

./: Cargo.toml  LICENSE  README.md
src/: colors.rs  main.rs
