[package]
name = "colorgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap-stdin = "0.6.0"
image = "0.25.5"
itertools = "0.14.0"
open = "5.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_yml = "0.0.12"
tempfile = "3.18.0"

[[bin]]
name = "colorgen"
path = "src/main.rs"
